--- a/speakers.html
+++ b/speakers.html
@@ -79,6 +79,17 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
+	<div id="swermter" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/swermter.PNG" alt="Stefan Wermter" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/wermter.html" target="_blank">Stefan Wermter</a></br>
+			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br><a href="https://www.uni-hamburg.de/" target="_blank">Universitat Hamburg</a></br></br>
+			</strong></br>
+			<b>Hybrid Neural Learning for Interactive Robots</b></br>13.30 CEST</br>
+                        </br> 
+		</p>
+	</div>
+
 	<div id="asciutti" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/asciutti.jpg" alt="Alessandra Sciutti" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
@@ -86,16 +97,6 @@ Licence URI: http://www.os-templates.com/template-terms
 			<a href="https://www.iit.it/web/cognitive-architecture-for-collaborative-technologies" target="_blank">Cognitive Architecture for Collaborative Technologies unit</a></br><a href="https://www.iit.it/" target="_blank">Istituto Italiano di Tecnologia</a></br></br>
 			</strong></br>
 			<b>More Humane Learning</b></br>14.00 CEST</br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="swermter" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/man.png" alt="Stefan Wermter" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/wermter.html" target="_blank">Stefan Wermter</a></br>
-			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br><a href="https://www.uni-hamburg.de/" target="_blank">Universitat Hamburg</a></br></br>
-			To be announced</strong></br>
                         </br> 
 		</p>
 	</div>
