--- a/speakers.html
+++ b/speakers.html
@@ -80,7 +80,7 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div id="swermter" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/swermter.PNG" alt="Stefan Wermter" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/swermter.png" alt="Stefan Wermter" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/wermter.html" target="_blank">Stefan Wermter</a></br>
 			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br><a href="https://www.uni-hamburg.de/" target="_blank">Universitat Hamburg</a></br></br>
