extended abstracts specification at homepage

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ In this regard, approaches with special interest for this workshop are (but not 
 
 <br/>
 <strong>Important dates:</strong></br></br>
-    Paper submission deadline:  July 02, 2021 (23:59 AoE)</br>
+    Paper and extended abstract submission deadline:  July 02, 2021 (23:59 AoE)</br>
     Notification of acceptance: July 30, 2021</br>
     Camera-ready version: August 12, 2021 (23:59 AoE)</br>
     Workshop: August 27, 2021 </br></br>
