--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ Licence URI: http://www.os-templates.com/template-terms
 
 <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 
+<style>
 .responsive-container {
   position: relative;
   overflow: hidden;
@@ -30,7 +31,7 @@ Licence URI: http://www.os-templates.com/template-terms
   width: 100%;
   height: 100%;
 }
-
+</style>
 </head>
 <body id="top">
 
