--- a/speakers.html
+++ b/speakers.html
@@ -57,6 +57,17 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
+	<div id="swermter" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/swermter.png" alt="Stefan Wermter" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/wermter.html" target="_blank">Stefan Wermter</a></br>
+			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br><a href="https://www.uni-hamburg.de/" target="_blank">Universitat Hamburg</a></br></br>
+			</strong></br>
+			<b>Hybrid Neural Learning for Interactive Robots</b></br>11.30 CEST</br>
+                        </br> 
+		</p>
+	</div>
+
 	<div id="brosman" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/brosman.jpg" alt="Benjamin Rosman" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
@@ -79,13 +90,13 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div id="swermter" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/swermter.png" alt="Stefan Wermter" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+	<div id="rdazeley" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/rdazeley.jpg" alt="Richard Dazeley" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/wermter.html" target="_blank">Stefan Wermter</a></br>
-			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br><a href="https://www.uni-hamburg.de/" target="_blank">Universitat Hamburg</a></br></br>
+			<strong><a href="https://www.deakin.edu.au/about-deakin/people/richard-dazeley" target="_blank">Richard Dazeley</a></br>
+			<a href="https://blogs.deakin.edu.au/mila/" target="_blank">Machine Intelligence Lab</a><br/><a href="https://www.deakin.edu.au/" target="_blank">Deakin University</a></br></br>
 			</strong></br>
-			<b>Hybrid Neural Learning for Interactive Robots</b></br>13.30 CEST</br>
+			<b>Broad-XAI: Human-aligned conversational explanations</b></br>13.30 CEST</br>
                         </br> 
 		</p>
 	</div>
@@ -162,17 +173,6 @@ Licence URI: http://www.os-templates.com/template-terms
 			<a href="https://deepmind.com/" target="_blank"> DeepMind, Edmonton, Alberta</a><br/></br></br>
 			</strong></br>
 			<b>Constructivism in Tightly Coupled Human Machine Interfaces</b></br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="rdazeley" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/rdazeley.jpg" alt="Richard Dazeley" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://www.deakin.edu.au/about-deakin/people/richard-dazeley" target="_blank">Richard Dazeley</a></br>
-			<a href="https://blogs.deakin.edu.au/mila/" target="_blank">Machine Intelligence Lab</a><br/><a href="https://www.deakin.edu.au/" target="_blank">Deakin University</a></br></br>
-			</strong></br>
-			<b>Broad-XAI: Human-aligned conversational explanations</b></br>
                         </br> 
 		</p>
 	</div>
