fixing background-color for program links

--- a/program_cest.html
+++ b/program_cest.html
@@ -30,6 +30,11 @@ td, th {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
+
+.a_link {
+    background-color: #dddddd;
+}
+
 </style>
 
 </head>
@@ -82,7 +87,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>11:30</td>
-    <td><a href="speakers.html#swermter">Stefan Wermter</a></td>
+    <td><a class="a_link" href="speakers.html#swermter">Stefan Wermter</a></td>
     <td>Hybrid Neural Learning for Interactive Robots</td>
   </tr>
 
@@ -94,7 +99,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>12:30</td>
-    <td><a href="speakers.html#jkober">Jens Kober</a></td>
+    <td><a class="a_link" href="speakers.html#jkober">Jens Kober</a></td>
     <td>Reinforcement Learning with Interactive Corrections</td>
   </tr>
 
@@ -116,7 +121,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>14:00</td>
-    <td><a href="speakers.html#asciutti">Alessandra Sciutti</a></td>
+    <td><a class="a_link" href="speakers.html#asciutti">Alessandra Sciutti</a></td>
     <td>More Humane Learning</td>
   </tr>
 
@@ -128,7 +133,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>15:00</td>
-    <td><a href="speakers.html#mtaylor">Matthew Taylor</a></td>
+    <td><a class="a_link" href="speakers.html#mtaylor">Matthew Taylor</a></td>
     <td>Agents learning from humans -- what the heck do you want me to do?</td>
   </tr>
 
@@ -150,7 +155,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>16:30</td>
-    <td><a href="speakers.html#wbknox">W. Bradley Knox</a></td>
+    <td><a class="a_link" href="speakers.html#wbknox">W. Bradley Knox</a></td>
     <td>Reward (Mis)design for Autonomous Driving</td>
   </tr>
 
@@ -162,7 +167,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>17:30</td>
-    <td><a href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
+    <td><a class="a_link" href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
     <td>Action Advising for Accelerating Multiagent Reinforcement Learning</td>
   </tr>
 
