--- a/program_clt.html
+++ b/program_clt.html
@@ -30,6 +30,11 @@ td, th {
 tr:nth-child(even) {
   background-color: #dddddd;
 }
+
+.a_link {
+    background-color: #dddddd;
+}
+
 </style>
 
 </head>
@@ -81,7 +86,7 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>06:30</td>
-    <td><a href="speakers.html#swermter">Stefan Wermter</a></td>
+    <td><a class="a_link" href="speakers.html#swermter">Stefan Wermter</a></td>
     <td>Hybrid Neural Learning for Interactive Robots</td>
   </tr>
 
@@ -93,7 +98,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>07:30</td>
-    <td><a href="speakers.html#jkober">Jens Kober</a></td>
+    <td><a class="a_link" href="speakers.html#jkober">Jens Kober</a></td>
     <td>Reinforcement Learning with Interactive Corrections</td>
   </tr>
 
@@ -115,7 +120,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>09:00</td>
-    <td><a href="speakers.html#asciutti">Alessandra Sciutti</a></td>
+    <td><a class="a_link" href="speakers.html#asciutti">Alessandra Sciutti</a></td>
     <td>More Humane Learning</td>
   </tr>
 
@@ -127,7 +132,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>10:00</td>
-    <td><a href="speakers.html#mtaylor">Matthew Taylor</a></td>
+    <td><a class="a_link" href="speakers.html#mtaylor">Matthew Taylor</a></td>
     <td>Agents learning from humans -- what the heck do you want me to do?</td>
   </tr>
 
@@ -149,7 +154,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>11:30</td>
-    <td><a href="speakers.html#wbknox">W. Bradley Knox</a></td>
+    <td><a class="a_link" href="speakers.html#wbknox">W. Bradley Knox</a></td>
     <td>Reward (Mis)design for Autonomous Driving</td>
   </tr>
 
@@ -161,7 +166,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>12:30</td>
-    <td><a href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
+    <td><a class="a_link" href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
     <td>Action Advising for Accelerating Multiagent Reinforcement Learning</td>
   </tr>
 
