--- a/cfp.html
+++ b/cfp.html
@@ -47,8 +47,8 @@ Prospective participants in the workshop are required to submit a contribution a
     - Extended abstract (max 2 pages)</br>
     - Full paper (max 6 pages)</br></br>
 
-where both pages limit include references. Submissions must be in PDF following the <a href="http://ras.papercept.net/conferences/support/support.php" target="_blank">IEEE conference style in two-columns</a>, and they will follow a single blind review process.
-<br>Send your PDF manuscript through EasyChair: <a href="https://easychair.org/conferences/?conf=harlworkshop2021">here</a></br></br> 
+where both pages limit include references. Submissions must be in PDF following the <a href="http://ras.papercept.net/conferences/support/support.php" target="_blank">IEEE conference style in two-columns</a> (also available <a href="https://www.overleaf.com/latex/templates/ieee-conference-template/grfzhhncsfqn" target="_blank">on Overleaf</a>), and they will follow a single blind review process.
+<br><br>Send your PDF manuscript through EasyChair: <a href="https://easychair.org/conferences/?conf=harlworkshop2021">here</a></br></br> 
 
 
 Selected contributions will be presented during the workshop as <b>online</b> spotlight talks. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
