--- a/organizers.html
+++ b/organizers.html
@@ -52,9 +52,9 @@ Licence URI: http://www.os-templates.com/template-terms
 		<p style="text-align:justify;">
 			<strong><a href="http://www.franciscocruz.cl/" target="_blank">Francisco Cruz</br></a>
 			<a href="https://www.deakin.edu.au/information-technology" target="_blank">School of Information Technology</a></br>
-			Deakin University</br>
+			<a href="https://www.deakin.edu.au" target="_blank">Deakin University</a></br>
 			Australia</br>
-			Escuela de Ingenieria, Universidad Central de Chile, Chile</br></br>
+			<a href="https://www.ucentral.cl/ucentral/site/edic/base/port/finarq.html" target="_blank">Escuela de Ingenieria, Universidad Central de Chile</a>, Chile</br></br>
 		</p>
 	</div>
 
@@ -63,7 +63,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<p style="text-align:justify;">
 			<strong><a href="https://www.thommengk.com/" target="_blank">Thommen George Karimpanal</br></a>
 			<a href="https://www.deakin.edu.au/a2i2" target="_blank">Applied Artificial Intelligence Institute</a></br>
-			Deakin University</br>
+			<a href="https://www.deakin.edu.au" target="_blank">Deakin University</a></br>
 			Australia</br></br>
 		</p>
 	</div>
@@ -73,7 +73,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<p style="text-align:justify;">
 			<strong><a href="https://www.innovacionyrobotica.com/miguel.solis" target="_blank">Miguel Solis</br></a>
 			<a href="https://facultades.unab.cl/ingenieria/carreras/ingenieria-automatizacion-robotica/" target="_blank">Facultad de Ingenieria</a></br>
-			Universidad Andres Bello</br>
+			<a href="https://www.unab.cl" target="_blank">Universidad Andres Bello</a></br>
 			Chile</br></br>
 		</p>
 	</div>
@@ -83,7 +83,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<p style="text-align:justify;">
 			<strong><a href="http://pablobarros.net" target="_blank">Pablo Barros</br></a>
 			<a href="https://www.iit.it/web/cognitive-architecture-for-collaborative-technologies" target="_blank">Cognitive Architecture for Collaborative Technologies Unit</a></br>
-			Istituto Italiano di Tecnologia</br>
+			<a href="https://www.iit.it" target="_blank">Istituto Italiano di Tecnologia</a></br>
 			Italia</br></br>
 		</p>
 	</div>
@@ -93,7 +93,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<p style="text-align:justify;">
 			<strong><a href="https://www.deakin.edu.au/about-deakin/people/richard-dazeley" target="_blank">Richard Dazeley</br></a>
 			<a href="https://blogs.deakin.edu.au/mila/" target="_blank">Machine Intelligence Lab</a></br>
-			Deakin University</br>
+			<a href="https://www.deakin.edu.au" target="_blank">Deakin University</a></br>
 			Australia</br></br>
 		</p>
 	</div>
@@ -116,7 +116,7 @@ Licence URI: http://www.os-templates.com/template-terms
 	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.unab.cl"><img src="images/unab.PNG" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.iit.it"><img src="images/iit.PNG" alt="Istituto Italiano di Tecnologia" height="80px" width="auto" style="float: center; margin:10px;"></a>
-
+	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	</div>
     </div>
   </div>
