--- a/program_utc.html
+++ b/program_utc.html
@@ -194,7 +194,7 @@ tr:nth-child(even) {
 	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.unab.cl"><img src="images/unab.PNG" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.iit.it"><img src="images/iit.PNG" alt="Istituto Italiano di Tecnologia" height="80px" width="auto" style="float: center; margin:10px;"></a>
-
+	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	</div>
     </div>
   </div>
