including benjamin's talk title

--- a/program_cest.html
+++ b/program_cest.html
@@ -94,7 +94,7 @@ tr:nth-child(even) {
   <tr>
     <td>12:00</td>
     <td><a href="speakers.html#brosman">Benjamin Rosman</a></td>
-    <td>To be announced</td>
+    <td>Collaboration under uncertainty</td>
   </tr>
 
   <tr>
