--- a/program_clt.html
+++ b/program_clt.html
@@ -93,7 +93,7 @@ tr:nth-child(even) {
   <tr>
     <td>07:00</td>
     <td><a href="speakers.html#brosman">Benjamin Rosman</a></td>
-    <td>To be announced</td>
+    <td>Collaboration under uncertainty</td>
   </tr>
 
   <tr>
