--- a/speakers.html
+++ b/speakers.html
@@ -74,7 +74,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<strong><a href="https://www.benjaminrosman.com/" target="_blank">Benjamin Rosman</a></br>
 			<a href="https://www.wits.ac.za/csam/" target="_blank">School of Computer Science and Applied Mathematics</a><br/><a href="https://www.wits.ac.za/" target="_blank">University of the Witwatersrand</a></br></br>
 			</strong></br>
-			<b>to be announced</b></br>12.00 CEST</br>
+			<b>Collaboration under uncertainty</b></br>12.00 CEST</br>
                         </br> 
 		</p>
 	</div>
@@ -195,7 +195,7 @@ Licence URI: http://www.os-templates.com/template-terms
 	<a target="blank" href="https://www.deakin.edu.au"><img src="images/deakin.PNG" alt="Deakin University" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.unab.cl"><img src="images/unab.PNG" alt="Universidad Andres Bello" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	<a target="blank" href="https://www.iit.it"><img src="images/iit.PNG" alt="Istituto Italiano di Tecnologia" height="80px" width="auto" style="float: center; margin:10px;"></a>
-
+	<a target="blank" href="https://www.ucentral.cl"><img src="images/ucentral.jpg" alt="Universidad Central" height="80px" width="auto" style="float: center; margin:10px;"></a>
 	</div>
     </div>
   </div>
