including eventbrite link

--- a/cfp.html
+++ b/cfp.html
@@ -31,6 +31,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
         <li><a style="font-size: 20px" href="contact.html" data-target="contact">Contact</a></li>
+        <li><a style="font-size: 20px" href="https://registrationharl.eventbrite.com.au" target="_blank">Attend</a></li>
       </ul>
     </div>
     <!-- ###### -->
@@ -52,7 +53,7 @@ where both pages limit include references. Submissions must be in PDF following 
 
 
 Selected contributions will be presented during the workshop as <b>online</b> spotlight talks. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
-
+We particularly encourage authors to share their in-progress works in the form of extended abstracts and short papers.<br/></br>
 
 <strong>Important dates:</strong></br></br>
 
