--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
         <li><a style="font-size: 20px" href="contact.html" data-target="contact">Contact</a></li>
+        <li><a style="font-size: 20px" href="https://registrationharl.eventbrite.com.au" target="_blank">Attend</a></li>
       </ul>
     </div>
     <!-- ###### -->
@@ -101,7 +102,7 @@ In this regard, approaches with special interest for this workshop are (but not 
 <li> Use of human priors in RL</li>
 </ul>
 
-
+We particularly encourage authors to share their in-progress works in the form of extended abstracts and short papers.<br/>
 
 <br/>
 <strong>Important dates:</strong></br></br>
@@ -113,6 +114,7 @@ In this regard, approaches with special interest for this workshop are (but not 
 
 <div data-type="countdown" data-id="2587199" class="tickcounter" style="width: 30%; position: relative; padding-bottom: 25%"><a href="//www.tickcounter.com/countdown/2587199/time-left-for-submissions" title="Time left for submissions">Time left for submissions</a><a href="//www.tickcounter.com/" title="Countdown">Countdown</a></div><script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
 </br>
+This is a <b>free event</b>, you should enroll <a href="https://registrationharl.eventbrite.com.au" target="_blank">here</a> for receiving the link for joining the workshop.<br><br>
 Selected contributions will be presented during the workshop as <b>online</b> spotlight talks. Accepted papers will be uploaded to the workshop website, but are free to appear in other journals or conference proceedings.</br></br>
 Contributors to the workshop will be invited to submit extended versions
 of the manuscripts to a <b>special issue</b> whose Call for Papers can be found <a href="https://www.springer.com/journal/521/updates/19055662" target="_blank">here</a>.<br/>
