--- a/program_utc.html
+++ b/program_utc.html
@@ -54,6 +54,7 @@ tr:nth-child(even) {
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
         <li><a style="font-size: 20px" href="contact.html" data-target="contact">Contact</a></li>
+        <li><a style="font-size: 20px" href="https://registrationharl.eventbrite.com.au" target="_blank">Attend</a></li>
       </ul>
     </div>
     <!-- ###### -->
