--- a/speakers.html
+++ b/speakers.html
@@ -113,6 +113,39 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
+	<div id="bfernandes" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/bfernandes.jpg" alt="Bruno Fernandes" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="https://sites.google.com/ecomp.poli.br/bjtf" target="_blank">Bruno Fernandes</a></br>
+			<a href="http://www.ecomp.poli.br/" target="_blank">Computer Engineering Dept</a><br/><a href="https://www.ufpe.br/" target="_blank">University of Pernambuco</a></br></br>
+			</strong></br>
+			<b>To be announced</b></br>14.30 CEST</br>
+                        </br> 
+		</p>
+	</div>
+
+	<div id="mtaylor" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/mtaylor.jpg" alt="Matthew Taylor" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="https://drmatttaylor.net/" target="_blank">Matthew Taylor</a></br>
+			<a href="https://irll.ca" target="_blank">Intelligent Robot Learning Laboratory</a></br><a href="https://www.ualberta.ca" target="_blank">University of Alberta</a></br></br>
+			</strong></br>
+			<b>Agents learning from humans -- what the heck do you want me to do?</b></br>15.00 CEST</br>
+                        </br> 
+		</p>
+	</div>
+
+	<div id="gkonidaris" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/gkonidaris.jpg" alt="George Konidaris" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<p style="text-align:justify;">
+			<strong><a href="http://cs.brown.edu/people/gdk/" target="_blank">George Konidaris</a></br>
+			<a href="http://irl.cs.brown.edu/" target="_blank">Intelligent Robot Lab</a><br/><a href="https://www.brown.edu/" target="_blank">Brown University</a></br></br>
+			</strong></br>
+			<b>To be announced</b></br>16.00 CEST</br>
+                        </br> 
+		</p>
+	</div>
+
 	<div id="wbknox" style="border-top: solid 1px #323232; min-height: 250px;">
 		<img src="images/display/wbknox.jpg" alt="W. Bradley Knox" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
@@ -124,13 +157,14 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div id="mtaylor" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/mtaylor.jpg" alt="Matthew Taylor" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+	<div id="ppilarski" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/ppilarski.jpg" alt="Patrick Pilarski" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="https://drmatttaylor.net/" target="_blank">Matthew Taylor</a></br>
-			<a href="https://irll.ca" target="_blank">Intelligent Robot Learning Laboratory</a></br><a href="https://www.ualberta.ca" target="_blank">University of Alberta</a></br></br>
+			<strong><a href="https://sites.ualberta.ca/~pilarski/" target="_blank">Patrick Pilarski</a></br>
+			<a href="https://blinclab.ca" target="_blank">Bionic Limbs for Improved Natural Control Laboratory</a><br/><a href="https://www.ualberta.ca" target="_blank">University of Alberta</a></br>
+			<a href="https://deepmind.com/" target="_blank"> DeepMind, Edmonton, Alberta</a><br/></br></br>
 			</strong></br>
-			<b>Agents learning from humans -- what the heck do you want me to do?</b></br>17.00 CEST</br>
+			<b>Constructivism in Tightly Coupled Human Machine Interfaces</b></br>17.00 CEST</br>
                         </br> 
 		</p>
 	</div>
@@ -142,38 +176,6 @@ Licence URI: http://www.os-templates.com/template-terms
 			<a href="https://st.llnl.gov/research" target="_blank">Lawrence Livermore National Lab</a></br></br>
 			</strong></br>
 			<b>Action Advising for Accelerating Multiagent Reinforcement Learning</b></br>17.30 CEST</br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="bfernandes" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/bfernandes.jpg" alt="Bruno Fernandes" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://sites.google.com/ecomp.poli.br/bjtf" target="_blank">Bruno Fernandes</a></br>
-			<a href="http://www.ecomp.poli.br/" target="_blank">Computer Engineering Dept</a><br/><a href="https://www.ufpe.br/" target="_blank">University of Pernambuco</a></br></br>
-			To be announced</strong></br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="gkonidaris" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/gkonidaris.jpg" alt="George Konidaris" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="http://cs.brown.edu/people/gdk/" target="_blank">George Konidaris</a></br>
-			<a href="http://irl.cs.brown.edu/" target="_blank">Intelligent Robot Lab</a><br/><a href="https://www.brown.edu/" target="_blank">Brown University</a></br></br>
-			To be announced</strong></br>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="ppilarski" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/ppilarski.jpg" alt="Patrick Pilarski" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://sites.ualberta.ca/~pilarski/" target="_blank">Patrick Pilarski</a></br>
-			<a href="https://blinclab.ca" target="_blank">Bionic Limbs for Improved Natural Control Laboratory</a><br/><a href="https://www.ualberta.ca" target="_blank">University of Alberta</a></br>
-			<a href="https://deepmind.com/" target="_blank"> DeepMind, Edmonton, Alberta</a><br/></br></br>
-			</strong></br>
-			<b>Constructivism in Tightly Coupled Human Machine Interfaces</b></br>
                         </br> 
 		</p>
 	</div>
