eventbrite link and navbar update

--- a/organizers.html
+++ b/organizers.html
@@ -30,8 +30,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
-        <li><a style="font-size: 20px" href="contact.html" data-target="contact">Contact</a></li>
-        <li><a style="font-size: 20px" href="https://registrationharl.eventbrite.com.au" target="_blank">Attend</a></li>
+        <li><a style="font-size: 20px" href="https://registrationharl.eventbrite.com.au" target="_blank">Registration</a></li>
       </ul>
     </div>
     <!-- ###### -->
@@ -56,6 +55,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<a href="https://www.deakin.edu.au" target="_blank">Deakin University</a></br>
 			Australia</br>
 			<a href="https://www.ucentral.cl/ucentral/site/edic/base/port/finarq.html" target="_blank">Escuela de Ingenieria, Universidad Central de Chile</a>, Chile</br></br>
+			francisco.cruz [at] deakin.edu.au</strong></br></br>
 		</p>
 	</div>
 
@@ -66,6 +66,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<a href="https://www.deakin.edu.au/a2i2" target="_blank">Applied Artificial Intelligence Institute</a></br>
 			<a href="https://www.deakin.edu.au" target="_blank">Deakin University</a></br>
 			Australia</br></br>
+			thommen.karimpanalgeorge [at] deakin.edu.au</strong></br></br>
 		</p>
 	</div>
 	
@@ -76,6 +77,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<a href="https://facultades.unab.cl/ingenieria/carreras/ingenieria-automatizacion-robotica/" target="_blank">Facultad de Ingenieria</a></br>
 			<a href="https://www.unab.cl" target="_blank">Universidad Andres Bello</a></br>
 			Chile</br></br>
+			miguel.solis [at] unab.cl</strong></br></br>
 		</p>
 	</div>
 
