--- a/cfp.html
+++ b/cfp.html
@@ -30,8 +30,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
-        <li><a style="font-size: 20px" href="contact.html" data-target="contact">Contact</a></li>
-        <li><a style="font-size: 20px" href="https://registrationharl.eventbrite.com.au" target="_blank">Attend</a></li>
+        <li><a style="font-size: 20px" href="https://registrationharl.eventbrite.com.au" target="_blank">Registration</a></li>
       </ul>
     </div>
     <!-- ###### -->
