--- a/program.html
+++ b/program.html
@@ -55,8 +55,7 @@ tr:nth-child(even) {
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html" data-target="program">Program</a></li>
-        <li><a style="font-size: 20px" href="contact.html" data-target="contact">Contact</a></li>
-        <li><a style="font-size: 20px" href="https://registrationharl.eventbrite.com.au" target="_blank">Attend</a></li>
+        <li><a style="font-size: 20px" href="https://registrationharl.eventbrite.com.au" target="_blank">Registration</a></li>
       </ul>
     </div>
     <!-- ###### -->
@@ -78,7 +77,7 @@ tr:nth-child(even) {
 <a href="program_clt.html">Chilean Standard Time</a></br></br>
 <a href="program_cest.html">Central European Summer Time</a></br></br>
 <a href="program_utc.html">Coordinated Universal Time</a></br><br>
-This is a <b>free event</b>, you should enroll <a href="https://registrationharl.eventbrite.com.au" target="_blank">here</a> for receiving the link for joining the workshop.<br><br>
+This is a <b>free event</b>. Click <a href="https://registrationharl.eventbrite.com.au" target="_blank">here</a> to register.<br><br>
 </div>
 
 		</div>
