--- a/cfp.html
+++ b/cfp.html
@@ -56,12 +56,12 @@ We particularly encourage authors to share their in-progress works in the form o
 
 <strong>Important dates:</strong></br></br>
 
-    Paper and extended abstract submission deadline:  July 02, 2021 (23:59 <a href="https://www.timeanddate.com/time/zones/aoe" target="_blank">AoE</a>)</br>
+    Paper and extended abstract submission deadline:  <del>July 02, 2021</del> <b style="color:red">July 12, 2021</b> (23:59 <a href="https://www.timeanddate.com/time/zones/aoe" target="_blank">AoE</a>, <b style="color:red">extended deadline</b>)</br>
     Notification of acceptance: July 30, 2021</br>
     Camera-ready version: August 12, 2021 (23:59 <a href="https://www.timeanddate.com/time/zones/aoe" target="_blank">AoE</a>)</br>
     Workshop: August 27, 2021 </br></br>
 
-<div data-type="countdown" data-id="2587199" class="tickcounter" style="width: 30%; position: relative; padding-bottom: 25%"><a href="//www.tickcounter.com/countdown/2587199/time-left-for-submissions" title="Time left for submissions">Time left for submissions</a><a href="//www.tickcounter.com/" title="Countdown">Countdown</a></div><script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
+<div data-type="countdown" data-id="2614234" class="tickcounter" style="width: 30%; position: relative; padding-bottom: 25%"><a href="//www.tickcounter.com/countdown/2614234/time-left-for-submissions" title="Time left for submissions">Time left for submissions</a><a href="//www.tickcounter.com/" title="Countdown">Countdown</a></div><script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
 </br>
 <strong>Journal Special Issue:</strong></br></br>
 
