peter talk title

--- a/program_aest.html
+++ b/program_aest.html
@@ -82,7 +82,7 @@ tr:nth-child(even) {
   <tr>
     <td>19:00</td>
     <td><a href="speakers.html#pvamplew">Peter Vamplew</a></td>
-    <td>To be announced</td>
+    <td>Multiobjective Approaches to Human-Aligned Reinforcement Learning</td>
   </tr>
 
   <tr>
