--- a/speakers.html
+++ b/speakers.html
@@ -52,7 +52,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<strong><a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences/staff-profiles/information-technology/peter-vamplew" target="_blank">Peter Vamplew</a></br>
 			<a href="https://federation.edu.au/schools/school-of-engineering-information-technology-and-physical-sciences" target="_blank">School of Engineering, Information Technology and Physical Sciences</a></br><a href="https://federation.edu.au/" target="_blank">Federation University</a></br></br>
 			</strong></br>
-			<b>to be announced</b></br>11.00 CEST</br>
+			<b>Multiobjective Approaches to Human-Aligned Reinforcement Learning</b></br>11.00 CEST</br>
                         </br> 
 		</p>
 	</div>
