--- a/program_utc.html
+++ b/program_utc.html
@@ -81,7 +81,7 @@ tr:nth-child(even) {
   <tr>
     <td>09:00</td>
     <td><a href="speakers.html#pvamplew">Peter Vamplew</a></td>
-    <td>To be announced</td>
+    <td>Multiobjective Approaches to Human-Aligned Reinforcement Learning</td>
   </tr>
 
   <tr>
