new contribution talks slot

--- a/program_clt.html
+++ b/program_clt.html
@@ -75,8 +75,12 @@ tr:nth-child(even) {
     <th>Topic</th>
   </tr>
   <tr>
-    <td>05:45</td>
+    <td>05:30</td>
     <td colspan="2"><b>Welcome and introduction</b></td>
+  </tr>
+  <tr>
+    <td>05:45</td>
+    <td colspan="2"><b>Contribution talks</b></td>
   </tr>
 
   <tr>
