--- a/program_utc.html
+++ b/program_utc.html
@@ -74,8 +74,12 @@ tr:nth-child(even) {
     <th>Topic</th>
   </tr>
   <tr>
-    <td>08:45</td>
+    <td>08:30</td>
     <td colspan="2"><b>Welcome and introduction</b></td>
+  </tr>
+  <tr>
+    <td>08:45</td>
+    <td colspan="2"><b>Contribution talks</b></td>
   </tr>
 
   <tr>
