--- a/program_aest.html
+++ b/program_aest.html
@@ -75,35 +75,35 @@ tr:nth-child(even) {
     <th>Topic</th>
   </tr>
   <tr>
-    <td>18:30</td>
+    <td>18:15</td>
     <td colspan="2"><b>Welcome and introduction</b></td>
   </tr>
   <tr>
-    <td>18:45</td>
+    <td>18:30</td>
     <td colspan="2"><b>Contribution talks</b></td>
   </tr>
 
   <tr>
     <td>19:00</td>
-    <td><a href="speakers.html#pvamplew">Peter Vamplew</a></td>
+    <td><a class="a_link" href="speakers.html#pvamplew">Peter Vamplew</a></td>
     <td>Multiobjective Approaches to Human-Aligned Reinforcement Learning</td>
   </tr>
 
   <tr>
     <td>19:30</td>
-    <td><a class="a_link" href="speakers.html#swermter">Stefan Wermter</a></td>
+    <td><a href="speakers.html#swermter">Stefan Wermter</a></td>
     <td>Hybrid Neural Learning for Interactive Robots</td>
   </tr>
 
   <tr>
     <td>20:00</td>
-    <td><a href="speakers.html#brosman">Benjamin Rosman</a></td>
+    <td><a class="a_link" href="speakers.html#brosman">Benjamin Rosman</a></td>
     <td>Collaboration under uncertainty</td>
   </tr>
 
   <tr>
     <td>20:30</td>
-    <td><a class="a_link" href="speakers.html#jkober">Jens Kober</a></td>
+    <td><a href="speakers.html#jkober">Jens Kober</a></td>
     <td>Reinforcement Learning with Interactive Corrections</td>
   </tr>
 
@@ -119,25 +119,25 @@ tr:nth-child(even) {
 
   <tr>
     <td>21:30</td>
-    <td><a href="speakers.html#rdazeley">Richard Dazeley</a></td>
+    <td><a class="a_link" href="speakers.html#rdazeley">Richard Dazeley</a></td>
     <td>Broad-XAI: Human-aligned conversational explanations</td>
   </tr>
 
   <tr>
     <td>22:00</td>
-    <td><a class="a_link" href="speakers.html#asciutti">Alessandra Sciutti</a></td>
+    <td><a href="speakers.html#asciutti">Alessandra Sciutti</a></td>
     <td>More Humane Learning</td>
   </tr>
 
   <tr>
     <td>22:30</td>
-    <td><a href="speakers.html#bfernandes">Bruno Fernandes</a></td>
+    <td><a class="a_link" href="speakers.html#bfernandes">Bruno Fernandes</a></td>
     <td>To be announced</td>
   </tr>
 
   <tr>
     <td>23:00</td>
-    <td><a class="a_link" href="speakers.html#mtaylor">Matthew Taylor</a></td>
+    <td><a href="speakers.html#mtaylor">Matthew Taylor</a></td>
     <td>Agents learning from humans -- what the heck do you want me to do?</td>
   </tr>
 
@@ -153,25 +153,25 @@ tr:nth-child(even) {
 
   <tr>
     <td>00:00 (28th Aug)</td>
-    <td><a href="speakers.html#gkonidaris">George Konidaris</a></td>
+    <td><a class="a_link" href="speakers.html#gkonidaris">George Konidaris</a></td>
     <td>To be announced</td>
   </tr>
 
   <tr>
     <td>00:30 (28th Aug)</td>
-    <td><a class="a_link" href="speakers.html#wbknox">W. Bradley Knox</a></td>
+    <td><a href="speakers.html#wbknox">W. Bradley Knox</a></td>
     <td>Reward (Mis)design for Autonomous Driving</td>
   </tr>
 
   <tr>
     <td>01:00 (28th Aug)</td>
-    <td><a href="speakers.html#ppilarski">Patrick Pilarski</a></td>
+    <td><a class="a_link" href="speakers.html#ppilarski">Patrick Pilarski</a></td>
     <td>Constructivism in Tightly Coupled Human Machine Interfaces</td>
   </tr>
 
   <tr>
     <td>01:30 (28th Aug)</td>
-    <td><a class="a_link" href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
+    <td><a href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
     <td>Action Advising for Accelerating Multiagent Reinforcement Learning</td>
   </tr>
 
