--- a/program_clt.html
+++ b/program_clt.html
@@ -79,30 +79,30 @@ tr:nth-child(even) {
     <td colspan="2"><b>Welcome and introduction</b></td>
   </tr>
   <tr>
-    <td>05:45</td>
+    <td>05:35</td>
     <td colspan="2"><b>Contribution talks</b></td>
   </tr>
 
   <tr>
     <td>06:00</td>
-    <td><a href="speakers.html#pvamplew">Peter Vamplew</a></td>
+    <td><a class="a_link" href="speakers.html#pvamplew">Peter Vamplew</a></td>
     <td>Multiobjective Approaches to Human-Aligned Reinforcement Learning</td>
   </tr>
   <tr>
     <td>06:30</td>
-    <td><a class="a_link" href="speakers.html#swermter">Stefan Wermter</a></td>
+    <td><a href="speakers.html#swermter">Stefan Wermter</a></td>
     <td>Hybrid Neural Learning for Interactive Robots</td>
   </tr>
 
   <tr>
     <td>07:00</td>
-    <td><a href="speakers.html#brosman">Benjamin Rosman</a></td>
+    <td><a class="a_link" href="speakers.html#brosman">Benjamin Rosman</a></td>
     <td>Collaboration under uncertainty</td>
   </tr>
 
   <tr>
     <td>07:30</td>
-    <td><a class="a_link" href="speakers.html#jkober">Jens Kober</a></td>
+    <td><a href="speakers.html#jkober">Jens Kober</a></td>
     <td>Reinforcement Learning with Interactive Corrections</td>
   </tr>
 
@@ -118,25 +118,25 @@ tr:nth-child(even) {
 
   <tr>
     <td>08:30</td>
-    <td><a href="speakers.html#rdazeley">Richard Dazeley</a></td>
+    <td><a class="a_link" href="speakers.html#rdazeley">Richard Dazeley</a></td>
     <td>Broad-XAI: Human-aligned conversational explanations</td>
   </tr>
 
   <tr>
     <td>09:00</td>
-    <td><a class="a_link" href="speakers.html#asciutti">Alessandra Sciutti</a></td>
+    <td><a href="speakers.html#asciutti">Alessandra Sciutti</a></td>
     <td>More Humane Learning</td>
   </tr>
 
   <tr>
     <td>09:30</td>
-    <td><a href="speakers.html#bfernandes">Bruno Fernandes</a></td>
+    <td><a class="a_link" href="speakers.html#bfernandes">Bruno Fernandes</a></td>
     <td>To be announced</td>
   </tr>
 
   <tr>
     <td>10:00</td>
-    <td><a class="a_link" href="speakers.html#mtaylor">Matthew Taylor</a></td>
+    <td><a href="speakers.html#mtaylor">Matthew Taylor</a></td>
     <td>Agents learning from humans -- what the heck do you want me to do?</td>
   </tr>
 
@@ -152,25 +152,25 @@ tr:nth-child(even) {
 
   <tr>
     <td>11:00</td>
-    <td><a href="speakers.html#gkonidaris">George Konidaris</a></td>
+    <td><a class="a_link" href="speakers.html#gkonidaris">George Konidaris</a></td>
     <td>To be announced</td>
   </tr>
 
   <tr>
     <td>11:30</td>
-    <td><a class="a_link" href="speakers.html#wbknox">W. Bradley Knox</a></td>
+    <td><a href="speakers.html#wbknox">W. Bradley Knox</a></td>
     <td>Reward (Mis)design for Autonomous Driving</td>
   </tr>
 
   <tr>
     <td>12:00</td>
-    <td><a href="speakers.html#ppilarski">Patrick Pilarski</a></td>
+    <td><a class="a_link" href="speakers.html#ppilarski">Patrick Pilarski</a></td>
     <td>Constructivism in Tightly Coupled Human Machine Interfaces</td>
   </tr>
 
   <tr>
     <td>12:30</td>
-    <td><a class="a_link" href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
+    <td><a href="speakers.html#fleno">Felipe Leno Da Silva</a></td>
     <td>Action Advising for Accelerating Multiagent Reinforcement Learning</td>
   </tr>
 
