including george talk

--- a/program_cest.html
+++ b/program_cest.html
@@ -154,7 +154,7 @@ tr:nth-child(even) {
   <tr>
     <td>16:00</td>
     <td><a class="a_link" href="speakers.html#gkonidaris">George Konidaris</a></td>
-    <td>To be announced</td>
+    <td>Grounded Symbolic Representations for Human-Robot Communication</td>
   </tr>
 
   <tr>
