--- a/speakers.html
+++ b/speakers.html
@@ -140,7 +140,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<strong><a href="http://cs.brown.edu/people/gdk/" target="_blank">George Konidaris</a></br>
 			<a href="http://irl.cs.brown.edu/" target="_blank">Intelligent Robot Lab</a><br/><a href="https://www.brown.edu/" target="_blank">Brown University</a></br></br>
 			</strong></br>
-			<b>To be announced</b></br>16.00 CEST</br>
+			<b>Grounded Symbolic Representations for Human-Robot Communication</b></br>16.00 CEST</br>
                         </br> 
 		</p>
 	</div>
