--- a/program_cest.html
+++ b/program_cest.html
@@ -132,7 +132,7 @@ tr:nth-child(even) {
   <tr>
     <td>14:30</td>
     <td><a class="a_link" href="speakers.html#bfernandes">Bruno Fernandes</a></td>
-    <td>To be announced</td>
+    <td>Reinforcement Learning for Robot Control and Interaction</td>
   </tr>
 
   <tr>
