--- a/program_clt.html
+++ b/program_clt.html
@@ -131,7 +131,7 @@ tr:nth-child(even) {
   <tr>
     <td>09:30</td>
     <td><a class="a_link" href="speakers.html#bfernandes">Bruno Fernandes</a></td>
-    <td>To be announced</td>
+    <td>Reinforcement Learning for Robot Control and Interaction</td>
   </tr>
 
   <tr>
