--- a/program_aest2.html
+++ b/program_aest2.html
@@ -17,6 +17,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <style>
 table {
   font-family: arial, sans-serif;
+  font-size: 10px;
   border-collapse: collapse;
   width: 100%;
 }
