contribution talks program

--- a/program_aest.html
+++ b/program_aest.html
@@ -17,6 +17,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <style>
 table {
   font-family: arial, sans-serif;
+  font-size: 16px;
   border-collapse: collapse;
   width: 100%;
 }
@@ -24,6 +25,7 @@ table {
 td, th {
   border: 1px solid #dddddd;
   text-align: left;
+  font-size: 16px;
   padding: 8px;
 }
 
@@ -79,9 +81,14 @@ tr:nth-child(even) {
     <td colspan="2"><b>Welcome and introduction</b></td>
   </tr>
   <tr>
-    <td>18:35</td>
-    <td colspan="2"><b>Contribution talks</b></td>
-  </tr>
+    <td rowspan="3">18:35</td>
+    <td rowspan="3" colspan="2"><b>Contribution talks - Session 1</b><br>
+<ul>
+<li><a href="submission_3.pdf" target="_blank">Should I Trust You? Incorporating Unreliable Expert Advice in Human-Agent Interaction</a><br><i>Tamlin Love, Ritesh Ajoodha and Benjamin Rosman</i>
+</li>
+<li><a href="submission_8.pdf" target="_blank">Mixing Human Demonstrations with Self-Exploration in Experience Replay for Deep Reinforcement Learning</a><br><i>Akansel Cosgun and Dylan Klein</i>
+</li></ul></td>
+</tr><tr></tr><tr></tr>
 
   <tr>
     <td>19:00</td>
@@ -113,9 +120,16 @@ tr:nth-child(even) {
   </tr>
 
   <tr>
-    <td>21:15</td>
-    <td colspan="2"><b>Contribution talks</b></td>
-  </tr>
+    <td rowspan="3">21:15</td>
+    <td colspan="2" rowspan="3"><b>Contribution talks - Session 2</b>
+<ul>
+<li><a href="submission_6.pdf" target="_blank">Explanations In, Explanations Out: Human-in-the-Loop Social Navigation Learning</a><br><i>Jakob Karalus, Amar Halilovic and Felix Lindner</i>
+</li>
+<li><a href="submission_7.pdf" target="_blank">Learning Proxemic Behavior Using Reinforcement Learning with Cognitive Agents</a><br><i>Cristian Camilo Millán Arias, Bruno Fernandes and Francisco Cruz</i>
+</li>
+</ul>
+</td>
+  </tr><tr></tr><tr></tr>
 
   <tr>
     <td>21:30</td>
@@ -147,9 +161,15 @@ tr:nth-child(even) {
   </tr>
 
   <tr>
-    <td>23:45</td>
-    <td colspan="2"><b>Contribution talks</b></td>
-  </tr>
+    <td rowspan="3">23:45</td>
+    <td colspan="2" rowspan="3"><b>Contribution talks - Session 3</b>
+<ul>
+<li><a href="submission_5.pdf" target="_blank">Policy Regularization for Legible Behavior</a><br><i>Michele Persiani</i>
+</li>
+<li><a href="submission_9.pdf" target="_blank">Explainable Deep Reinforcement Learning Using Introspection in a Non-episodic Task</a><br><i>Angel Ayala, Francisco Cruz, Bruno Fernandes and Richard Dazeley</i>
+</li>
+</ul></td>
+  </tr><tr></tr><tr></tr>
 
   <tr>
     <td>00:00 (28th Aug)</td>
