--- a/program_utc.html
+++ b/program_utc.html
@@ -78,9 +78,14 @@ tr:nth-child(even) {
     <td colspan="2"><b>Welcome and introduction</b></td>
   </tr>
   <tr>
-    <td>08:35</td>
-    <td colspan="2"><b>Contribution talks</b></td>
-  </tr>
+    <td rowspan="3">08:35</td>
+    <td rowspan="3" colspan="2"><b>Contribution talks - Session 1</b><br>
+<ul>
+<li><a href="submission_3.pdf" target="_blank">Should I Trust You? Incorporating Unreliable Expert Advice in Human-Agent Interaction</a><br><i>Tamlin Love, Ritesh Ajoodha and Benjamin Rosman</i>
+</li>
+<li><a href="submission_8.pdf" target="_blank">Mixing Human Demonstrations with Self-Exploration in Experience Replay for Deep Reinforcement Learning</a><br><i>Akansel Cosgun and Dylan Klein</i>
+</li></ul></td>
+</tr><tr></tr><tr></tr>
 
   <tr>
     <td>09:00</td>
@@ -112,9 +117,16 @@ tr:nth-child(even) {
   </tr>
 
   <tr>
-    <td>11:15</td>
-    <td colspan="2"><b>Contribution talks</b></td>
-  </tr>
+    <td rowspan="3">11:15</td>
+    <td colspan="2" rowspan="3"><b>Contribution talks - Session 2</b>
+<ul>
+<li><a href="submission_6.pdf" target="_blank">Explanations In, Explanations Out: Human-in-the-Loop Social Navigation Learning</a><br><i>Jakob Karalus, Amar Halilovic and Felix Lindner</i>
+</li>
+<li><a href="submission_7.pdf" target="_blank">Learning Proxemic Behavior Using Reinforcement Learning with Cognitive Agents</a><br><i>Cristian Camilo Millán Arias, Bruno Fernandes and Francisco Cruz</i>
+</li>
+</ul>
+</td>
+  </tr><tr></tr><tr></tr>
 
   <tr>
     <td>11:30</td>
@@ -146,9 +158,15 @@ tr:nth-child(even) {
   </tr>
 
   <tr>
-    <td>13:45</td>
-    <td colspan="2"><b>Contribution talks</b></td>
-  </tr>
+    <td rowspan="3">13:45</td>
+    <td colspan="2" rowspan="3"><b>Contribution talks - Session 3</b>
+<ul>
+<li><a href="submission_5.pdf" target="_blank">Policy Regularization for Legible Behavior</a><br><i>Michele Persiani</i>
+</li>
+<li><a href="submission_9.pdf" target="_blank">Explainable Deep Reinforcement Learning Using Introspection in a Non-episodic Task</a><br><i>Angel Ayala, Francisco Cruz, Bruno Fernandes and Richard Dazeley</i>
+</li>
+</ul></td>
+  </tr><tr></tr><tr></tr>
 
   <tr>
     <td>14:00</td>
