cornelius weber talk

--- a/program_aest.html
+++ b/program_aest.html
@@ -98,7 +98,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>19:30</td>
-    <td><a href="speakers.html#swermter">Stefan Wermter</a></td>
+    <td><a href="speakers.html#cweber">Cornelius Weber</a></td>
     <td>Hybrid Neural Learning for Interactive Robots</td>
   </tr>
 
