--- a/program_cest.html
+++ b/program_cest.html
@@ -96,7 +96,7 @@ tr:nth-child(even) {
 
   <tr>
     <td>11:30</td>
-    <td><a href="speakers.html#swermter">Stefan Wermter</a></td>
+    <td><a href="speakers.html#cweber">Cornelius Weber</a></td>
     <td>Hybrid Neural Learning for Interactive Robots</td>
   </tr>
 
