--- a/program_clt.html
+++ b/program_clt.html
@@ -95,7 +95,7 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>05:30</td>
-    <td><a href="speakers.html#swermter">Stefan Wermter</a></td>
+    <td><a href="speakers.html#cweber">Cornelius Weber</a></td>
     <td>Hybrid Neural Learning for Interactive Robots</td>
   </tr>
 
