--- a/speakers.html
+++ b/speakers.html
@@ -57,10 +57,10 @@ Licence URI: http://www.os-templates.com/template-terms
 		</p>
 	</div>
 
-	<div id="swermter" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/swermter.png" alt="Stefan Wermter" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+	<div id="cweber" style="border-top: solid 1px #323232; min-height: 250px;">
+		<img src="images/display/cweber.jpg" alt="Stefan Wermter" height="220px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
-			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/wermter.html" target="_blank">Stefan Wermter</a></br>
+			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/weber.html" target="_blank">Cornelius Weber</a></br>
 			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br><a href="https://www.uni-hamburg.de/" target="_blank">Universitat Hamburg</a></br></br>
 			</strong></br>
 			<b>Hybrid Neural Learning for Interactive Robots</b></br>11.30 CEST</br>
