--- a/speakers.html
+++ b/speakers.html
@@ -58,7 +58,7 @@ Licence URI: http://www.os-templates.com/template-terms
 	</div>
 
 	<div id="cweber" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/cweber.jpg" alt="Cornelius Weber" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
+		<img src="images/display/cweber.jpg" alt="Cornelius Weber" height="175px" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
 		<p style="text-align:justify;">
 			<strong><a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm/people/weber.html" target="_blank">Cornelius Weber</a></br>
 			<a href="https://www.inf.uni-hamburg.de/en/inst/ab/wtm.html" target="_blank">Knowledge Technology Institute</a></br><a href="https://www.uni-hamburg.de/" target="_blank">Universitat Hamburg</a></br></br>
