--- a/program_cest.html
+++ b/program_cest.html
@@ -103,7 +103,7 @@ tr:nth-child(even) {
   <tr>
     <td>12:00</td>
     <td><a class="a_link" href="speakers.html#brosman">Benjamin Rosman</a></td>
-    <td>Collaboration under uncertainty</td>
+    <td>Modelling Imprecise Human Collaborators</td>
   </tr>
 
   <tr>
