--- a/program_utc.html
+++ b/program_utc.html
@@ -102,7 +102,7 @@ tr:nth-child(even) {
   <tr>
     <td>10:00</td>
     <td><a class="a_link" href="speakers.html#brosman">Benjamin Rosman</a></td>
-    <td>Collaboration under uncertainty</td>
+    <td>Modelling Imprecise Human Collaborators</td>
   </tr>
 
   <tr>
