--- a/speakers.html
+++ b/speakers.html
@@ -118,7 +118,7 @@ Licence URI: http://www.os-templates.com/template-terms
 			<strong><a href="https://sites.google.com/ecomp.poli.br/bjtf" target="_blank">Bruno Fernandes</a></br>
 			<a href="http://www.ecomp.poli.br/" target="_blank">Computer Engineering Dept</a><br/><a href="https://www.ufpe.br/" target="_blank">University of Pernambuco</a></br></br>
 			</strong></br>
-			<b>To be announced</b></br>14.30 CEST</br>
+			<b>Reinforcement Learning for Robot Control and Interaction</b></br>14.30 CEST</br>
                         </br> 
 		</p>
 	</div>
