--- a/program_aest.html
+++ b/program_aest.html
@@ -105,7 +105,7 @@ tr:nth-child(even) {
   <tr>
     <td>20:00</td>
     <td><a class="a_link" href="speakers.html#brosman">Benjamin Rosman</a></td>
-    <td>Collaboration under uncertainty</td>
+    <td>Modelling Imprecise Human Collaborators</td>
   </tr>
 
   <tr>
